# CS6300

./: .gitignore  CMakeLists.txt  Expressions.cpp  Expressions.hpp  ProcessLog.cpp  README  README.md  RegisterPool.cpp  RegisterPool.hpp  StringTable.cpp  StringTable.hpp  SymbolTable.cpp  Type.hpp  main.cpp  parser.y  scanner.l
AST_INC/AST/: AdditionExpression.hpp  AndExpression.cpp  AndExpression.hpp  BasicBlock.cpp  BasicBlock.hpp  CallExpression.cpp  CallExpression.hpp  ChrExpression.cpp  DivExpression.cpp  DivExpression.hpp  EqExpression.hpp  Expression.cpp  Expression.hpp  Function.cpp  Function.hpp  GtExpression.cpp  GtExpression.hpp  GteExpression.cpp  GteExpression.hpp  LValue.cpp  LValue.hpp  LiteralExpression.cpp  LtExpression.cpp  LtExpression.hpp  LteExpression.cpp  LteExpression.hpp  MultExpression.cpp  NeqExpression.cpp  NeqExpression.hpp  NotExpression.cpp  NotExpression.hpp  OrExpression.cpp  OrdExpression.hpp  PredecessorExpression.hpp  Program.hpp  RegisterScope.hpp  StringExpression.cpp  StringTable.cpp  StringTable.hpp  SubtractExpression.hpp  (+10 more)
AST_INC/AST/Expressions/: AdditionExpression.cpp  AdditionExpression.hpp  AndExpression.cpp  AndExpression.hpp  CallExpression.cpp  CallExpression.hpp  ChrExpression.cpp  ChrExpression.hpp  DivExpression.cpp  DivExpression.hpp  EqExpression.cpp  EqExpression.hpp  Expression.cpp  Expression.hpp  GtExpression.cpp  GtExpression.hpp  GteExpression.cpp  GteExpression.hpp  LiteralExpression.cpp  LiteralExpression.hpp  LoadExpression.cpp  LoadExpression.hpp  LtExpression.cpp  LtExpression.hpp  LteExpression.cpp  LteExpression.hpp  MemoryAccessExpression.cpp  MemoryAccessExpression.hpp  MemoryExpression.cpp  MemoryExpression.hpp  ModExpression.cpp  ModExpression.hpp  MultExpression.cpp  MultExpression.hpp  NeqExpression.cpp  NeqExpression.hpp  NotExpression.cpp  NotExpression.hpp  OrExpression.cpp  OrExpression.hpp  (+12 more)
AST_INC/AST/Statements/: Assignment.cpp  Assignment.hpp  Call.cpp  Call.hpp  For.cpp  For.hpp  If.cpp  If.hpp  Read.cpp  Read.hpp  Repeat.cpp  Repeat.hpp  Return.cpp  Return.hpp  Statement.cpp  Statement.hpp  Stop.cpp  Stop.hpp  While.cpp  While.hpp  Write.cpp  Write.hpp
BackEnd/: Allocation.cpp  Allocation.hpp  BackEnd.cpp  BackEnd.hpp  RegisterPool.cpp  RegisterPool.hpp
FrontEnd/: Expressions.cpp  FlowGraph.cpp  FrontEnd.cpp  FrontEnd.hpp  ProcessLog.hpp  SymbolTableOld.hpp  parser.y  scanner.l
Optimizations/: FlowGraph.cpp  FlowGraph.h  MaximizeBlocks.cpp  MaximizeBlocks.hpp  NumParents.hpp  Optimizer.cpp  Optimizer.hpp  VisitedBlocks.cpp  VisitedBlocks.hpp
Optimizations/MaximizeBlocks/: MaximizeBlocks.cpp  MaximizeBlocks.hpp  NumParents.cpp  NumParents.hpp  VisitedBlocks.cpp  VisitedBlocks.hpp
Optimizations/SuperBlockClone/: SuperBlockClone.cpp  SuperBlockClone.hpp
Testing/: ProgramFactory.cpp  ProgramFactory.hpp  README.md  catch.hpp  main.cpp
Testing/OutputVerificationTests/: verifyTestFilesOutput.py
Testing/OutputVerificationTests/CpslFiles/: expressions.cpsl
Testing/OutputVerificationTests/OutOfOrder/: function_no_args.cpsl  function_with_args.cpsl
Testing/OutputVerificationTests/TestFilesCorrectOutput/: expressions_ExpectedOutput.txt  ifelseif_nestedResults.txt  ifelseif_simple_ExpectedOutput.txt  while_ExpectedOutput.txt  while_nested_ExpectedOutput.txt
Testing/UnitTests/: AllocationTest.cpp  ExpressionTest.cpp  MaximizingBlocksTest.cpp  StatementTest.cpp  sanityCheck.cpp
Testing/gtest-1.7.0/: CTestTestfile.cmake  config.status  gtest.cbp  libtool
gtest-1.7.0/lib/: libgtest_main.la
gtest-1.7.0/lib/.libs/: libgtest.so.0.0.0  libgtest_main.so.0.0.0
log/: ProcessLog.cpp  ProcessLog.hpp  easylogging++.h  log.conf  logger.cpp  logger.h
tester/: tester.sh
tester/Base/: arr_ret.cpsl  array_arg.cpsl  array_ref.cpsl  array_ret.cpsl  array_type.cpsl  assign_array.cpsl  assign_char.cpsl  assign_int.cpsl  func_recursion.cpsl  func_types.cpsl  mix_arrays.cpsl  mix_control.cpsl  mix_expressions.cpsl  nested_elseif.cpsl  nested_for.cpsl  nested_func.cpsl  nested_if.cpsl  nested_recurse.cpsl  nested_ref.cpsl  nested_repeat.cpsl  nested_while.cpsl  personnel.cpsl  proc_arg.cpsl  read_simple_if.cpsl  rec_record.cpsl  record_arg.cpsl  record_array_ret.cpsl  record_ref.cpsl  record_type.cpsl  scoped_members.cpsl  simple_arg.cpsl  simple_else.cpsl  simple_elseif.cpsl  simple_expr.cpsl  simple_for.cpsl  simple_function.cpsl  simple_functionparam.cpsl  simple_if.cpsl  simple_procedure.cpsl  simple_recursion.cpsl  (+2 more)
tester/TestFiles/: arr_ret.cpsl  array_arg.cpsl  array_ref.cpsl  array_ret.cpsl  array_type.cpsl  assign_array.cpsl  assign_bool.cpsl  assign_char.cpsl  assign_int.cpsl  bool_ret.cpsl  char_ret.cpsl  func_recursion.cpsl  func_types.cpsl  input_read_simple_if.cpsl  int_ret.cpsl  mix_arrays.cpsl  mix_expressions.cpsl  nested_func.cpsl  nested_recurse.cpsl  nested_ref.cpsl  personnel.cpsl  proc_arg.cpsl  read_simple_if.cpsl  rec_record.cpsl  record_arg.cpsl  record_array_ret.cpsl  record_ref.cpsl  record_ret.cpsl  record_type.cpsl  scoped_members.cpsl  simple_arg.cpsl  simple_array.cpsl  simple_else.cpsl  simple_function.cpsl  simple_functionparam.cpsl  simple_if.cpsl  simple_recursion.cpsl  simple_ref.cpsl  swap.cpsl
tools/: lcovgen
unittests/: MaximizingBlocksTest.cpp
